Dibuat menggunakan Colaboratory

--- a/gmaps_analytics.ipynb
+++ b/gmaps_analytics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLb7xvw5ewTWyI9CCI5yRf",
+      "authorship_tag": "ABX9TyNoWEEunnwFt7PjXEJ5COdP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Gmaps Analysis"
+        "# Gmaps Ratings & Reviewers Analysis"
       ],
       "metadata": {
         "id": "CUAa5KlCd-H_"
